--- a/languages/rs-feedburner.pot
+++ b/languages/rs-feedburner.pot
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: RS Feedburner\n"
+"Project-Id-Version: RS FeedBurner\n"
 "POT-Creation-Date: 2014-12-16 19:00-0800\n"
 "PO-Revision-Date: 2015-01-19 15:00-0800\n"
 "Last-Translator: \n"
